// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SFooter Snapshot > renders full config correctly 1`] = `
"<footer class="footer-wrapper bg-primary-800 dark:bg-primary-950 mt-20 w-full">
  <div class="py-0 lg:py-0">
    <div class="w-full py-30">
      <div class="mx-auto max-w-[1248px] px-4">
        <nav class="xl:grid xl:grid-cols-3 xl:gap-8 footer-columns-large">
          <div class="mb-10 xl:mb-0">
            <div class="flex flex-col items-start space-x-2"><span class="text-primary-100 dark:text-primary-100 pb-4 text-4xl font-bold">My Company</span>
              <p class="text-primary-100 dark:text-primary-100 font-bold"> Subscribe to our newsletter. </p>
              <p class="text-primary-100 dark:text-primary-100"> Join a trillion readers and stay ahead of the curve. </p><button type="button" class="ring ring-inset ring-(--ui-primary)/50 hover:bg-(--ui-primary)/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent my-4 inline-flex items-center gap-2 rounded-md px-8 py-3 text-lg font-semibold text-neutral-300 transition-colors focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
                <!--v-if--><span class="truncate">Subscribe</span>
                <!--v-if-->
              </button>
              <!--v-if-->
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <div class="flex flex-col lg:grid grid-flow-col auto-cols-fr gap-8 xl:col-span-2">
            <div>
              <h3 class="font-semibold text-primary-100 text-xl dark:text-primary-100">Products</h3>
              <ul class="mt-6 space-y-4">
                <li class="relative"><a href="/product-1" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) transition-colors text-primary-100 hover:text-primary-200 dark:text-primary-100 dark:hover:text-primary-200">
                    <!--v-if--><span class="truncate">Product 1<!--v-if--></span>
                  </a></li>
                <li class="relative"><a href="/product-2" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) transition-colors text-primary-100 hover:text-primary-200 dark:text-primary-100 dark:hover:text-primary-200">
                    <!--v-if--><span class="truncate">Product 2<!--v-if--></span>
                  </a></li>
              </ul>
            </div>
            <div>
              <h3 class="font-semibold text-primary-100 text-xl dark:text-primary-100">Support</h3>
              <ul class="mt-6 space-y-4">
                <li class="relative"><a href="/support" class="group text-sm flex items-center gap-1.5 focus-visible:outline-(--ui-primary) transition-colors text-primary-100 hover:text-primary-200 dark:text-primary-100 dark:hover:text-primary-200">
                    <!--v-if--><span class="truncate">Help Center<!--v-if--></span>
                  </a></li>
              </ul>
            </div>
          </div>
          <!--v-if-->
        </nav>
      </div>
    </div>
  </div>
  <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-4 lg:flex lg:items-center lg:justify-between lg:gap-x-3">
    <div class="lg:flex-1 flex items-center justify-center lg:justify-end gap-x-1.5 lg:order-3"></div>
    <div class="mt-3 lg:mt-0 lg:order-2 flex items-center justify-center py-0 lg:py-0"></div>
    <div class="flex items-center justify-center lg:justify-start lg:flex-1 gap-x-1.5 mt-3 lg:mt-0 lg:order-1"></div>
  </div>
  <div class="py-0 lg:py-0">
    <div class="mx-auto flex max-w-[1248px] flex-col items-start justify-between px-4 pb-8 md:flex-row md:items-center">
      <!-- <div class="flex flex-row items-center md:mb-0"> -->
      <!-- Social Links -->
      <div aria-label="Social Media Links" class="mb-8 flex md:mb-0"><a href="https://twitter.com" rel="noopener noreferrer" target="_blank" aria-label="Twitter" class="mr-6"><span class="iconify i-twitter-icon text-primary-100 dark:text-primary-100 size-5" aria-hidden="true"></span><span class="sr-only">Visit our Twitter page</span></a><a href="https://facebook.com" rel="noopener noreferrer" target="_blank" aria-label="Facebook" class="mr-6"><span class="iconify i-facebook-icon text-primary-100 dark:text-primary-100 size-5" aria-hidden="true"></span><span class="sr-only">Visit our Facebook page</span></a></div><!-- </div> -->
      <div aria-label="Legal Navigation" class="flex flex-col text-sm sm:items-center md:flex-row">
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"><a href="/privacy" class="text-primary-100 dark:text-primary-100">Privacy Policy</a><a href="/terms" class="text-primary-100 dark:text-primary-100">Terms of Service</a></div>
      </div>
    </div>
  </div>
</footer>"
`;

exports[`SFooter Snapshot > renders minimal config with empty arrays correctly 1`] = `
"<footer class="footer-wrapper bg-primary-800 dark:bg-primary-950 mt-20 w-full">
  <div class="py-0 lg:py-0">
    <div class="w-full py-30">
      <div class="mx-auto max-w-[1248px] px-4">
        <nav class="xl:grid xl:grid-cols-3 xl:gap-8 footer-columns-large">
          <div class="mb-10 xl:mb-0">
            <div class="flex flex-col items-start space-x-2"><span class="text-primary-100 dark:text-primary-100 pb-4 text-4xl font-bold">Minimal Inc.</span>
              <p class="text-primary-100 dark:text-primary-100 font-bold"> Subscribe to our newsletter. </p>
              <p class="text-primary-100 dark:text-primary-100"> Join a trillion readers and stay ahead of the curve. </p><button type="button" class="ring ring-inset ring-(--ui-primary)/50 hover:bg-(--ui-primary)/10 disabled:bg-transparent aria-disabled:bg-transparent dark:disabled:bg-transparent dark:aria-disabled:bg-transparent my-4 inline-flex items-center gap-2 rounded-md px-8 py-3 text-lg font-semibold text-neutral-300 transition-colors focus:outline-hidden focus-visible:ring-2 focus-visible:ring-(--ui-primary) disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75">
                <!--v-if--><span class="truncate">Subscribe</span>
                <!--v-if-->
              </button>
              <!--v-if-->
              <!--teleport start-->
              <!--teleport end-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </nav>
      </div>
    </div>
  </div>
  <div class="max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 py-8 lg:py-4 lg:flex lg:items-center lg:justify-between lg:gap-x-3">
    <div class="lg:flex-1 flex items-center justify-center lg:justify-end gap-x-1.5 lg:order-3"></div>
    <div class="mt-3 lg:mt-0 lg:order-2 flex items-center justify-center py-0 lg:py-0"></div>
    <div class="flex items-center justify-center lg:justify-start lg:flex-1 gap-x-1.5 mt-3 lg:mt-0 lg:order-1"></div>
  </div>
  <div class="py-0 lg:py-0">
    <div class="mx-auto flex max-w-[1248px] flex-col items-start justify-between px-4 pb-8 md:flex-row md:items-center">
      <!-- <div class="flex flex-row items-center md:mb-0"> -->
      <!-- Social Links -->
      <div aria-label="Social Media Links" class="mb-8 flex md:mb-0"></div><!-- </div> -->
      <div aria-label="Legal Navigation" class="flex flex-col text-sm sm:items-center md:flex-row">
        <div class="flex flex-col flex-wrap justify-center gap-4 sm:flex-row md:justify-end"></div>
      </div>
    </div>
  </div>
</footer>"
`;
